# iolpy

./: .gitignore  .travis.yml  README.md  developer.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  tox.ini
.github/workflows/: pr_and_main.yml
examples/: how_to_use.py  how_to_use_2.py
iolpy/: __init__.py  stocks.py
iolpy/util/: const.py  utils.py
requirements/: base.in  base.txt  coverage.in  coverage.txt  test.in  test.txt
tests/: stocks_test.py
tests/util/: utils_test.py
