[tool.poetry]
name = "iolpy"
version = "0.0.1"
description = "A Python wrapper for the IOL API"
authors = ["Alexander Leaño <alexander.n.leano@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LeanoA/iolpy"
repository = "https://github.com/LeanoA/iolpy"
keywords = ["iol", "invertir online", "api", "wrapper", "python"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.2.4"
lxml = "^4.9.1"
html5lib = "^1.1"
openpyxl = "^3.1.2"
peewee = "^3.16.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
tox = "^3.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."